--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 <div class="cards">
 
-  <a class="card" href="DISCORD_LINK_HERE" target="_blank">
+  <a class="card" href="https://discord.gg/ag4fnMa5" target="_blank">
     <div class="card-icon">💬</div>
     <div class="card-title">Discord Community</div>
     <div class="card-desc">Join Forex Basket Traders (F.B.T) — scores, discussions, support, and live analysis.</div>
@@ -275,21 +275,21 @@
     <div class="card-tag">UPDATES → v2.00</div>
   </a>
 
-  <a class="card" href="DISCORD_LINK_HERE" target="_blank">
+  <a class="card" href="https://discord.gg/ag4fnMa5" target="_blank">
     <div class="card-icon">🐛</div>
     <div class="card-title">Report a Bug</div>
     <div class="card-desc">Found an issue? Post in #bug-reports with a screenshot of the Experts tab.</div>
     <div class="card-tag">DISCORD → #BUG-REPORTS</div>
   </a>
 
-  <a class="card" href="DISCORD_LINK_HERE" target="_blank">
+  <a class="card" href="https://discord.gg/ag4fnMa5" target="_blank">
     <div class="card-icon">❓</div>
     <div class="card-title">FAQ</div>
     <div class="card-desc">Frequently asked questions about scoring, trading, COT data, and system setup.</div>
     <div class="card-tag">DISCORD → #FRAGEN-ANTWORTEN</div>
   </a>
 
-  <a class="card" href="DISCORD_LINK_HERE" target="_blank">
+  <a class="card" href="https://discord.gg/ag4fnMa5" target="_blank">
     <div class="card-icon">📊</div>
     <div class="card-title">Daily Scores</div>
     <div class="card-desc">Current MATTRIX scores, analysis, and trade setups shared by the community.</div>
