--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     <div class="card-tag">COMMUNITY → JOIN SERVER</div>
   </a>
 
-  <a class="card" href="manual.html">
+  <a class="card" href="Manual.html">
     <div class="card-icon">📖</div>
     <div class="card-title">User Manual</div>
     <div class="card-desc">Complete guide: installation, dashboard, settings, manual & auto trading, risk management.</div>
