--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
 
 <footer>
   <div class="copy">© 2026 Matthias Scholz — FOREX BASKET TRADERS (F.B.T)</div>
+  <div style="margin-top:6px; font-size:0.8em; color:#557;">Originally inspired by the Dashboard Power Meter concept shared by Edition GVC on ForexFactory (2019).</div>
   <div class="disclaimer">
     This software is provided "AS IS" for testing purposes. No guarantee of correct execution or profitability.
     Forex trading carries a high level of risk. Do not invest money you cannot afford to lose.
