--- a/changelog.html
+++ b/changelog.html
@@ -63,18 +63,20 @@
   <div class="change"><span class="change-type type-new">NEW</span><span>Complete MT5 Expert Advisor — all analysis and trading in one platform</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>28-pair dashboard with 11 data columns and real-time updates</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>MATTRIX Score Panel with currency ranking, COT scores, and pip tracking</span></div>
-  <div class="change"><span class="change-type type-new">NEW</span><span>9 configurable trigger filters (PipW, PipD, PipS, PipE, PStr, Score, Gap, ADR%, Exposure)</span></div>
+  <div class="change"><span class="change-type type-new">NEW</span><span>9 configurable trigger filters (PipW, PipD, PipS, PipE, BStr, Score, Gap, ADR%, Exposure)</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>Currency basket trading (8 currencies + RON/ROFF risk baskets)</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>6-level Profit Lock system with trailing</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>Info Panel — live account status, settings overview, session display</span></div>
-  <div class="change"><span class="change-type type-new">NEW</span><span>Dashboard sorting by PStr, Score, PipS, or P/L (configurable interval)</span></div>
+  <div class="change"><span class="change-type type-new">NEW</span><span>Dashboard sorting by BStr, Score, PipS, or P/L (configurable interval)</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>Synthetic currency charts — 10 symbols (#EUR–#JPY + #RON + #ROFF)</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>RON/ROFF indicator for currency strength visualization</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>4 trading sessions with auto close-all at session end</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>Spread guard on pair and basket level</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>Automatic broker suffix detection</span></div>
   <div class="change"><span class="change-type type-new">NEW</span><span>$/pip lot normalization (auto-calculated per pair)</span></div>
-  <div class="change"><span class="change-type type-new">NEW</span><span>Beta key protection with expiry date</span></div>
+  <div class="change"><span class="change-type type-new">NEW</span><span>Daily Kill Switch — 3-trigger account protection (TP Soft Kill, SL Warning, SL Hard Kill) with auto-reset at midnight</span></div>
+  <div class="change"><span class="change-type type-new">NEW</span><span>Access Level system (TESTER → Demo only, ALPHA → Live capped at $1/pip, PRO → unrestricted) with hardcoded enforcement</span></div>
+  <div class="change"><span class="change-type type-new">NEW</span><span>Beta key protection with expiry date and tiered access levels</span></div>
   <div class="change"><span class="change-type type-chg">CHG</span><span>Migrated from Excel-based analysis to fully integrated MT5 solution</span></div>
   <div class="change"><span class="change-type type-chg">CHG</span><span>Execution speed: ~3-8ms (vs 300-1000ms with Excel bridge)</span></div>
 </div>
