--- a/index.html
+++ b/index.html
@@ -239,6 +239,13 @@
     <span class="badge">v2.00 BETA</span>
     <span class="badge">EXPIRES 2026.05.31</span>
   </div>
+  <div class="badge-row" style="margin-top:8px;">
+    <span class="badge" style="border-color:#555; color:#666;">TESTER</span>
+    <span class="badge" style="border-color:var(--cyan-dim); color:var(--cyan-dim);">→</span>
+    <span class="badge" style="border-color:#cc0; color:#cc0;">ALPHA</span>
+    <span class="badge" style="border-color:var(--cyan-dim); color:var(--cyan-dim);">→</span>
+    <span class="badge" style="border-color:var(--green); color:var(--green);">PRO</span>
+  </div>
 </div>
 
 <div class="currencies">
@@ -286,14 +293,14 @@
     <div class="card-icon">❓</div>
     <div class="card-title">FAQ</div>
     <div class="card-desc">Frequently asked questions about scoring, trading, COT data, and system setup.</div>
-    <div class="card-tag">DISCORD → #FRAGEN-ANTWORTEN</div>
+    <div class="card-tag">DISCORD → #QUESTIONS-AND-ANSWERS</div>
   </a>
 
   <a class="card" href="https://discord.gg/ag4fnMa5" target="_blank">
     <div class="card-icon">📊</div>
     <div class="card-title">Daily Scores</div>
     <div class="card-desc">Current MATTRIX scores, analysis, and trade setups shared by the community.</div>
-    <div class="card-tag">DISCORD → #SCORES</div>
+    <div class="card-tag">DISCORD → #DAILY-SCORES</div>
   </a>
 
 </div>
